--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.21.1",
     "babel-core": "^6.26.3",
     "next": "^10.0.3",
+    "next-redux-wrapper": "^6.0.2",
     "nprogress": "^0.2.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
