--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "babel-core": "^6.26.3",
+    "enzyme": "^3.11.0",
     "next": "^10.0.3",
     "next-redux-wrapper": "^6.0.2",
     "nprogress": "^0.2.0",
@@ -16,8 +17,11 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "react-test-renderer": "^17.0.1",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
+    "waait": "^1.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
