backend auth working

--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DevConnection": "server=localhost;port=3306;database=test;user=root;password=P@55w0rd!"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   }
 }
