--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DevConnection": "server=localhost;port=3306;database=test;user=root;password=P@55w0rd!"
+  },
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
   }
 }
