--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.2.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "auth0-js": "^9.14.0",
     "axios": "^0.21.1",
     "babel-core": "^6.26.3",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^6.0.0",
     "enzyme": "^3.11.0",
-    "next": "^10.0.3",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "history": "^5.0.0",
+    "isomorphic-fetch": "^3.0.0",
+    "jwt-decode": "^3.1.2",
+    "next": "latest",
     "next-redux-wrapper": "^6.0.2",
     "nprogress": "^0.2.0",
+    "passport": "^0.4.1",
+    "passport-auth0": "^1.4.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -21,6 +33,7 @@
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
+    "uid-safe": "^2.1.5",
     "waait": "^1.0.5",
     "web-vitals": "^0.2.4"
   },
