--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "babel-core": "^6.26.3",
     "body-parser": "^1.19.0",
+    "bootstrap": "^5.0.0-beta1",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^6.0.0",
     "enzyme": "^3.11.0",
