--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "4.0.1",
     "react-test-renderer": "^17.0.1",
     "redux-mock-store": "^1.5.4",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
     "uid-safe": "^2.1.5",
