--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "history": "^5.0.0",
     "isomorphic-fetch": "^3.0.0",
     "jwt-decode": "^3.1.2",
+    "msw": "^0.26.0",
     "next": "latest",
     "next-redux-wrapper": "^6.0.2",
     "nprogress": "^0.2.0",
