--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,14 @@
     "enzyme": "^3.11.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "fetch-mock": "^9.11.0",
     "history": "^5.0.0",
     "isomorphic-fetch": "^3.0.0",
     "jwt-decode": "^3.1.2",
     "msw": "^0.26.0",
     "next": "latest",
     "next-redux-wrapper": "^6.0.2",
+    "node-fetch": "^2.6.1",
     "nprogress": "^0.2.0",
     "passport": "^0.4.1",
     "passport-auth0": "^1.4.0",
