--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "auth0-js": "^9.14.0",
     "axios": "^0.21.1",
     "babel-core": "^6.26.3",
