--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "history": "^5.0.0",
     "isomorphic-fetch": "^3.0.0",
     "jwt-decode": "^3.1.2",
+    "moxios": "^0.4.0",
     "msw": "^0.26.0",
     "next": "latest",
     "next-redux-wrapper": "^6.0.2",
