added in some responsive styles

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,9 +8,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "server=localhost;port=3306;database=test;user=root;password=P@55w0rd!"
+    "DevConnection": "server=localhost;port=3306;database=test;user=root;password=P@55w0rd!",
+    "ProdConnection": "mysql://ba33841c7f2f33:fd995db4@us-cdbr-east-03.cleardb.com/heroku_cbf94c213968125?reconnect=true"
   },
   "AppSettings": {
-    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+    "Secret": "dskjafghdkdsahfjkdhfjkdhsg"
   }
 }
