--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,15 +2,17 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "engines":{
-    "node":"10.15.3",
-    "npm":"6.4.1"
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.4.1"
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.2.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@stripe/react-stripe-js": "^1.2.2",
+    "@stripe/stripe-js": "^1.12.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
